delete pop up dialog added

--- a/app/src/main/res/layout/activity_edit_diary.xml
+++ b/app/src/main/res/layout/activity_edit_diary.xml
@@ -23,16 +23,6 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true" />
 
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/deleteImage"
-            android:src="@android:drawable/ic_menu_delete"
-            android:scaleType="fitCenter"
-            android:background="@android:color/transparent"
-            android:layout_centerVertical="true"
-            android:layout_toEndOf="@+id/imageView" />
-
     </RelativeLayout>
 
 
@@ -79,7 +69,10 @@
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_marginTop="8dp"
-        android:textColor="@color/third" />
+        android:textColor="@color/third"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
+        android:paddingTop="4dp" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -101,16 +94,6 @@
             android:textColor="@color/accent"
             android:background="@anim/imageselector"/>
 
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/deleteAudio"
-            android:src="@android:drawable/ic_menu_delete"
-            android:scaleType="fitCenter"
-            android:background="@android:color/transparent"
-            android:layout_centerVertical="true"
-            android:layout_toEndOf="@+id/playButton" />
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -119,20 +102,7 @@
             android:text="location"
             android:textColor="@color/third"
             android:layout_centerVertical="true"
-            android:layout_alignParentEnd="false"
-            android:layout_marginEnd="47dp"/>
-
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/locDelete"
-            android:src="@android:drawable/ic_menu_delete"
-            android:scaleType="fitCenter"
-            android:background="@android:color/transparent"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_toEndOf="@id/locationText" />
+            android:layout_alignParentEnd="true" />
 
     </RelativeLayout>
 
