--- a/app/src/main/res/layout/fragment_edit_button.xml
+++ b/app/src/main/res/layout/fragment_edit_button.xml
@@ -10,19 +10,6 @@
     <!-- TODO: Update blank fragment layout -->
 
 
-    <com.melnykov.fab.FloatingActionButton
-        android:id="@+id/sendFab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        fab:fab_type="mini"
-        android:src="@drawable/send96px"
-        fab:fab_colorNormal="@color/primary"
-        fab:fab_colorPressed="@color/primary_pressed"
-        fab:fab_colorRipple="@color/ripple"
-        android:scaleType="fitCenter"
-        android:paddingTop="12dp"
-        android:layout_gravity="right|top"
-        android:layout_marginRight="@dimen/activity_horizontal_margin" />
 
     <com.melnykov.fab.FloatingActionButton
         android:id="@+id/cameraFab"
@@ -30,9 +17,9 @@
         android:layout_height="wrap_content"
         android:src="@drawable/camera96"
         fab:fab_type="mini"
-        fab:fab_colorNormal="@color/white"
-        fab:fab_colorPressed="@color/primary_pressed"
-        fab:fab_colorRipple="@color/ripple"
+        fab:fab_colorNormal="@color/accent"
+        fab:fab_colorPressed="@color/accent_dark"
+        fab:fab_colorRipple="@color/accent_light"
         android:scaleType="fitCenter"
         android:layout_weight="1"
         android:layout_marginLeft="80dp"
@@ -44,10 +31,10 @@
         android:id="@+id/locationFab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        fab:fab_colorNormal="@color/white"
+        fab:fab_colorNormal="@color/accent"
         fab:fab_type="mini"
-        fab:fab_colorPressed="@color/primary_pressed"
-        fab:fab_colorRipple="@color/ripple"
+        fab:fab_colorPressed="@color/accent_dark"
+        fab:fab_colorRipple="@color/accent_light"
         android:layout_marginLeft="144dp"
         android:cropToPadding="false"
         android:scaleType="fitCenter"
@@ -62,9 +49,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/rec96"
-        fab:fab_colorNormal="@color/white"
-        fab:fab_colorPressed="@color/primary_pressed"
-        fab:fab_colorRipple="@color/ripple"
+        fab:fab_colorNormal="@color/accent"
+        fab:fab_colorPressed="@color/accent_dark"
+        fab:fab_colorRipple="@color/accent_light"
         android:scaleType="fitCenter"
         android:layout_gravity="left|top"
         android:layout_weight="1"
