--- a/app/src/main/res/layout/activity_diary_list.xml
+++ b/app/src/main/res/layout/activity_diary_list.xml
@@ -5,8 +5,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="qiminl.lifaryupdate.DiaryListActivity"
-    android:background="@color/light_blue_grey">
+    tools:context="qiminl.lifaryupdate.DiaryListActivity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -27,9 +26,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
         android:src="@drawable/edit2"
-        fab:fab_colorNormal="@color/primary"
-        fab:fab_colorPressed="@color/primary_pressed"
-        fab:fab_colorRipple="@color/ripple"
+        fab:fab_colorNormal="@color/accent"
+        fab:fab_colorPressed="@color/accent_dark"
+        fab:fab_colorRipple="@color/accent_light"
         android:scaleType="fitXY"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
