--- a/app/src/main/res/layout/activity_edit_diary.xml
+++ b/app/src/main/res/layout/activity_edit_diary.xml
@@ -1,118 +1,172 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     tools:context="qiminl.lifaryupdate.EditDiaryActivity"
-    android:background="@color/light_blue_grey"
+    android:background="@color/background"
     android:id="@+id/diaryEditLayout">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal">
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:id="@+id/imageView"
-            android:layout_gravity="center_horizontal"
-            android:visibility="visible"
-            android:src="@android:drawable/ic_input_delete"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true" />
-
-    </RelativeLayout>
-
-
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/white"
-        android:outlineProvider="bounds"
-        android:elevation="2dp"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin">
-
-        <EditText
-            android:layout_width="223dp"
+        android:layout_height="86dp"
+        android:background="@color/primary"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:id="@+id/relativeLayout"
+        >
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/dateEdit"
-            android:text="DD-MM-YY"
-            android:textColor="@color/third"
-            android:layout_gravity="left|top" />
+            android:text="Jan 1st, 2013, 11:00:00"
+            android:textAppearance="@android:style/TextAppearance.Material.Headline"
+            android:textColor="@color/primary_text_white"
+            android:fontFamily="@string/roboto_light"
+            android:layout_marginTop="16dp"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="1dp"
+            android:id="@+id/imageView8"
+            android:src="@drawable/divider_white"
+            android:layout_alignParentStart="true"
+            android:scaleType="fitXY"
+            android:layout_marginTop="-8dp"
+            android:layout_alignTop="@+id/textView1" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView1"
+            android:text="shared"
+            android:textAppearance="@android:style/TextAppearance.Material.Body1"
+            android:textColor="@color/primary_text_white"
+            android:fontFamily="@string/roboto_light"
+            android:layout_below="@+id/dateEdit"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="16dp"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin" />
 
         <Spinner
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/shareSpinner"
-            android:layout_gravity="right|top"
-            android:spinnerMode="dropdown" />
-    </LinearLayout>
+            android:layout_below="@+id/imageView8"
+            android:focusable="true"
+            android:layout_marginTop="4dp"
+            android:layout_toEndOf="@id/textView1"
+            android:layout_marginLeft="4dp"/>
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textMultiLine"
-        android:ems="10"
-        android:id="@+id/editText"
-        android:hint="What are you doing today"
-        android:gravity="left|top"
-        android:background="@android:color/white"
-        android:singleLine="true"
-        android:shadowColor="@color/blue_grey"
-        android:layout_weight="1"
-        android:elevation="2dp"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="8dp"
-        android:textColor="@color/third"
-        android:paddingLeft="12dp"
-        android:paddingRight="12dp"
-        android:paddingTop="4dp" />
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="visible"
-        android:layout_marginTop="16dp"
-        android:outlineProvider="bounds"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin">
-
-
-        <Button
-            android:layout_width="56dp"
-            android:layout_height="56dp"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:gravity="center"
-            android:text="11&quot;"
-            android:id="@+id/playButton"
-            android:textColor="@color/accent"
-            android:background="@anim/imageselector"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:id="@+id/locationText"
-            android:text="location"
-            android:textColor="@color/third"
-            android:layout_centerVertical="true"
-            android:layout_alignParentEnd="true" />
 
     </RelativeLayout>
 
-    <fragment
+    <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical"
+        android:layout_below="@id/relativeLayout"
+        android:gravity="top|left"
+        android:weightSum="1"
+        android:padding="@dimen/activity_horizontal_margin">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/location_24dp"
+                android:id="@+id/locationFab"
+                android:scaleType="centerInside" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="@android:style/TextAppearance.Material.Body1"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:id="@+id/locationText"
+                android:text="location"
+                android:textColor="@color/secondary_text"
+                android:fontFamily="@string/roboto_light"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@+id/locationFab" />
+        </RelativeLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="What's up?"
+            android:fontFamily="@string/roboto_light"
+            android:textColor="@color/primary"
+            android:layout_marginTop="8dp"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textMultiLine"
+            android:id="@+id/editText"
+            android:singleLine="true"
+            android:textColor="@color/primary_text"
+            android:text="@string/lorem"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:textIsSelectable="false"
+            android:fontFamily="@string/roboto_light"
+            android:textAppearance="@android:style/TextAppearance.Material.Body1"
+            android:layout_weight="1"/>
+
+        <ImageView
+            android:layout_width="72dp"
+            android:layout_height="72dp"
+            android:id="@+id/imageView"
+            android:visibility="visible"
+            android:src="@android:drawable/ic_menu_camera"
+            android:layout_marginTop="8dp"
+            android:scaleType="center"
+            android:background="@drawable/edit_text_border" />
+
+        <Button
+            android:layout_width="196dp"
+            android:layout_height="36dp"
+            android:textAppearance="@android:style/TextAppearance.Material.Button"
+            android:text="11&quot;"
+            android:id="@+id/playButton"
+            android:gravity="left|center_vertical"
+            android:textColor="@color/primary_text_white"
+            android:background="@drawable/button_bg"
+            android:layout_marginTop="8dp"
+            android:drawableLeft="@drawable/ic_play_circle_outline_white_24dp"
+            android:drawablePadding="@dimen/editTextBox_padding"
+            android:paddingLeft="@dimen/editTextBox_padding"
+            android:maxWidth="351dp" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="36dp"
+            android:id="@+id/recordFab"
+            android:textAppearance="@android:style/TextAppearance.Material.Button"
+            android:text="@string/record"
+            android:gravity="center"
+            android:layout_marginTop="@dimen/activity_horizontal_margin"
+            android:background="@color/primary"
+            android:textColor="@color/primary_text_white"
+            />
+    </LinearLayout>
+
+
+    <com.melnykov.fab.FloatingActionButton
+        android:id="@+id/sendFab"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:name="qiminl.lifaryupdate.EditButtonFragment"
-        android:id="@+id/buttonsFrag"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="16dp" />
+        android:src="@drawable/ic_send_white_24dp"
+        fab:fab_colorNormal="@color/accent"
+        fab:fab_colorPressed="@color/accent_dark"
+        fab:fab_colorRipple="@color/primary_text_white"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:elevation="4dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="56dp" />
 
 
-</LinearLayout>
+</RelativeLayout>
